--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,19 +12,19 @@ body {
   /* background-color: #1a181f;
   background-color: #000;
   color: #fff; */
- 
+
   /* overflow: hidden; */
 }
 
 a {
   text-decoration: none;
-  color: #739CFB;
+  color: #739cfb;
 }
 
 .container {
   justify-content: center;
   text-align: center;
- }
+}
 
 .d-flex {
   display: flex;
@@ -33,8 +33,7 @@ a {
 
 .fren-nav {
   padding: 20px 30px;
-  background: url('/stars.png');
-
+  background: url("/stars.png");
 }
 
 .btn {
@@ -53,7 +52,7 @@ a {
 .connect-btn {
   color: #000;
   font-size: 14px;
-  background: #FEDA5E;
+  background: #feda5e;
   border-radius: 15px;
   padding: 15px 20px;
 }
@@ -61,24 +60,23 @@ a {
 .tw-btn {
   color: #fff;
   font-size: 14px;
-  background: #739CFB;
+  background: #739cfb;
   border-radius: 15px;
   padding: 15px 20px;
   margin-left: 1.5vw;
-
 }
 
 .main-title {
   font-size: 90px;
   font-weight: 900;
   font-style: italic;
-  font-family: 'Montserrat', serif;
+  font-family: "Montserrat", serif;
 }
 
 .main-desc {
   font-size: 20px;
   text-align: center;
-  color: #F2F2F2;
+  color: #f2f2f2;
   padding: 10px;
   line-height: 30px;
 }
@@ -88,9 +86,9 @@ a {
   font-size: 18px;
   border-radius: 15px;
   padding: 15px 20px;
-  background: #745EDA;
-  color: #F2F2F2;
-  border: 1px solid #FFFFFF;
+  background: #745eda;
+  color: #f2f2f2;
+  border: 1px solid #ffffff;
 }
 
 /* media query for mobile devices */
